<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">学习帮帮棒</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="answer">我来解答</string>
    <string name="help">我要求助</string>
    <string name="sign">签到</string>
    <string name="share">经验交流</string>
    <string name="social">逛逛</string>
    <string name="frends">圈子</string>
    <string name="feedback">意见反馈</string>
    <string name="settings">设置</string>
    <string name="please_login_text">请登录</string>
    <string name="phone_text">手机号码</string>
    <string name="password_text">输入密码</string>
    <string name="login">登录</string>
    <string name="reset">重置</string>
    <string name="ok">确认</string>
    <string name="personal_info_empty">点击头像登录</string>
    <string name="look">查看</string>
    <string name="answer_text">网友给的答案</string>
    <string name="no_register">还没有加入？</string>
    <string name="get_code_text">获取验证码</string>
    <string name="code_text">验证码</string>
    <string name="name_text">用户名</string>
    <string name="register">注册</string>
    <string name="boy_text">男</string>
    <string name="girl_text">女</string>
    <string name="pwd_text">密码</string>
    <string name="user_register">用户注册</string>
    <string name="sex_text">性别</string>
    <string name="repwd_text">确认密码</string>
    <string name="suggestionFeedback">意见反馈</string>
    <string name="suggestionsForUser">亲爱的小伙伴，有什么想告诉我们的，可以畅所欲言</string>
    <string name="new_password_to_phone">新密码发送至手机</string>
    <string name="register_text">立即注册！</string>
    <string name="foget_password">忘记密码？</string>
    <string name="find_password">立即找回！</string>
    <string name="password_find">找回密码</string>
    <string name="set_new_password">请设置新密码</string>
    <string name="contactInfo">联系方式(选填)</string>
    <string name="userContactHint">你的QQ,Email,或者手机号</string>
    <string name="feedbackSubmit">提交反馈</string>
    <string name="personalInfo">个人信息</string>
    <string name="head">头像</string>
    <string name="phoneNumber">手机号</string>
    <string name="changePwd">修改密码</string>
    <string name="exit">退出登录</string>
    <string name="changeName">修改用户名</string>
    <string name="oldPwdHint">请输入旧密码</string>
    <string name="newPwdHint">请输入新密码</string>
    <string name="titleHint">主题</string>
    <string name="descriptionHint">详细描述</string>
    <string name="myquestions">我求助的题目</string>
    <string name="details_for_help">求助详情</string>
    <string name="accept">采纳</string>
    <string name="return_back">返回</string>
    <string name="details_for_answer">抢答详情</string>
    <string name="content_share_hint">内容分享</string>
    <string name="share_submit">分享</string>
    <string name="pic_desc">图片描述</string>
    <string name="verifySucceed">验证成功</string>
    <string name="email_text">邮箱</string>
    <string name="verifyFailed">验证失败</string>
    <string name="xuanshangjifen">悬赏积分</string>
    <string name="error_register_user_name_null">用户名或密码不能为空</string>
    <string name="dialog_error_title">错误</string>
    <string name="error_register_password_null">用户名或密码不可为空</string>
    <string name="dialog_message_title">提示</string>
    <string name="dialog_text_wait">请等待</string>
    <string name="input_email">请输入Email地址</string>
    <string name="comment_text">评论</string>
    <string name="comment_text_hint">请输入评论内容</string>
    <string name="function_introduction">功能介绍</string>
    <string name="about_us">关于我们</string>
    <string name="i_wanna_share">我要分享</string>
    <string name="forget_password_find_password_button">发送邮件</string>
    <string name="forget_password_send_email">已发送邮件</string>
    <string name="forget_password_email_error">邮件发送错误，请确认您的邮件地址</string>
    <string name="edition">版本  V1.0</string>
    <string name="error_register_email_address_null">E-mail地址不可空</string>
    <string name="error_register_user_name_repeat">用户名已被注册，请重新填写</string>
    <string name="error_register_email_repeat">邮箱已被注册，请更换邮箱</string>
    <string name="error_register_password_not_equals">两次输入的密码不一样</string>
    <string name="network_error">网络错误</string>
    <string name="success_register_success">注册成功</string>
    <string name="score_text">积分:</string>
    <string name="main_name_text">用户名:</string>
    <string name="contact_phone">联系电话:  11111111111</string>
    <string name="contact_email">联系邮箱:  szhouchi0106@163.com</string>
    <string name="empty">当前列表无任何内容</string>
    <string name="friends_empty">你还未关注任何人</string>
    <string name="reply">发送</string>
    <string name="reply_text">请输入要发送的内容</string>
    <string name="look_hint">点击回复</string>
    <string name="attention">我关注的人</string>
    <string name="answer_details">答案详情</string>
    <string name="menu_insert">Create Todo</string>
    <string name="content">Enter your todo content</string>
    <string name="confirm">Done</string>
    <string name="create_todo">Create Todo</string>
    <string name="menu_delete">Delete Todo</string>
    <string name="menu_search">Search</string>
</resources>
