<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gainsboro"
    android:orientation="vertical" >
    
    <TextView
        android:layout_height="60dp"
        android:layout_width="match_parent"
        android:text="@string/personalInfo"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:background="#3366CC"
        android:gravity="center"/>
    
    <RelativeLayout 
        android:id="@+id/personalHead"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
       
        android:layout_height="60dp"
        android:background="@color/white">
        
        <TextView 
        	android:layout_width="wrap_content"
        	android:layout_height="match_parent"
        	android:layout_alignParentLeft="true"
        	android:text="@string/head"
        	android:paddingLeft="5dp"
        	android:gravity="center_vertical"
        	android:textSize="20sp"/>
            
        <ImageView
            android:id="@+id/personalHeadPicture"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
			android:layout_gravity="center"           
            android:layout_alignParentRight="true"/>
       
     </RelativeLayout>
     
     <RelativeLayout 
        android:id="@+id/personalName"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
       
        android:layout_height="60dp"
        android:background="@color/white">
        
        <TextView 
        	android:layout_width="wrap_content"
        	android:layout_height="match_parent"
        	android:layout_alignParentLeft="true"
        	android:text="@string/name_text"
        	android:paddingLeft="5dp"
        	android:gravity="center_vertical"
        	android:textSize="20sp"/>
            
        <TextView
            android:id="@+id/personalNameInfo"
            android:layout_width="wrap_content"
           	android:layout_height="match_parent"
           	android:paddingRight="5dp"
        	android:gravity="center_vertical"
            android:layout_alignParentRight="true"
            android:textSize="20sp"/>
       
     </RelativeLayout>
     
     <RelativeLayout 
        android:id="@+id/personalSex"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
       
        android:layout_height="60dp"
        android:background="@color/white">
        
        <TextView 
        	android:layout_width="wrap_content"
        	android:layout_height="match_parent"
        	android:layout_alignParentLeft="true"
        	android:paddingLeft="5dp"
        	android:gravity="center_vertical"
        	android:text="@string/sex_text"
        	android:textSize="20sp"/>
            
        <TextView
            android:id="@+id/personalSexInfo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:paddingRight="5dp"
        	android:gravity="center_vertical"
            android:textSize="20sp"/>
       
     </RelativeLayout>
     
     <RelativeLayout 
        android:id="@+id/personalPhoneNum"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white">
        
        <TextView 
        	android:layout_width="wrap_content"
        	android:layout_height="match_parent"
        	android:layout_alignParentLeft="true"
        	android:paddingLeft="5dp"
        	android:gravity="center_vertical"
        	android:text="@string/phoneNumber"
        	android:textSize="20sp"/>
            
        <TextView
            android:id="@+id/personalPhoneNumInfo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_alignParentRight="true"
            android:textSize="20sp"/>
       
     </RelativeLayout>
     
     <RelativeLayout 
        android:id="@+id/personalEmail"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white">
        
        <TextView 
        	android:layout_width="wrap_content"
        	android:layout_height="match_parent"
        	android:layout_alignParentLeft="true"
        	android:paddingLeft="5dp"
        	android:gravity="center_vertical"
        	android:text="@string/email_text"
        	android:textSize="20sp"/>
            
        <TextView
            android:id="@+id/personalEmailfo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_alignParentRight="true"
            android:textSize="20sp"/>
       
     </RelativeLayout>
    
     <RelativeLayout 
        android:id="@+id/personalChangePwd"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white">
        
        <TextView 
        	android:layout_width="wrap_content"
        	android:layout_height="match_parent"
        	android:paddingLeft="5dp"
        	android:gravity="center"
        	android:layout_alignParentLeft="true"
        	android:text="@string/changePwd"
        	android:textSize="20sp"/>            
       
     </RelativeLayout>
    
     <Button
         android:id="@+id/exitLogin"
         android:layout_marginTop="15dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:gravity="center"
         android:text="@string/exit"
         android:background="@color/red"
         android:layout_width="match_parent"
         android:textColor="@color/white"
         android:layout_height="60dp"/>

</LinearLayout>
